Fixed some horizontal scrolling issues.

--- a/www/styles.css
+++ b/www/styles.css
@@ -6,7 +6,6 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
   padding: 0;
   margin: 0;
-  overflow-x: hidden;
   overflow-y: scroll;
 }
 
@@ -34,6 +33,7 @@ header, footer {
 
 main {
   margin: 82px 32px 32px 32px;
+  overflow-x: hidden;
 }
 
 main:empty {
@@ -54,6 +54,7 @@ h1 {
 
 a {
   color: #000000;
+  word-wrap: break-word;
 }
 
 hr {
